# browsergod

./: .gitignore  README.md  setup.md
server/: README.md  pyproject.toml
server/src/server/: crew.py  main.py
server/src/server/config/: agents.yaml  tasks.yaml
server/src/server/tools/: mcp.py
server/src/test(dummycode)/: flow.py
web/: README.md  package-lock.json  package.json
web/src/app/: page.tsx
web/src/lib/: api.ts  utils.ts
web/src/types/: api.ts
