[project]
name = "server"
version = "0.1.0"
description = "server using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.75.0",
    "crewai[tools]>=0.201.1,<1.0.0",
]

[project.scripts]
server = "server.main:run"
run_crew = "server.main:run"
train = "server.main:train"
replay = "server.main:replay"
test = "server.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
